Avoid long titles to break the layout on narrow screens

--- a/src/resources/sass/project/_typography.scss
+++ b/src/resources/sass/project/_typography.scss
@@ -17,6 +17,7 @@ h2,
 	font-size: 20px;
 	line-height: 28px;
 	font-weight: 300;
+	word-break: break-word;
 
 	@include min-screen($screen-sm-min) {
 		font-size: 36px;
